--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
         "name": "404 Page not found",
         "description": "程元召的个人博客！",
         "image": "https://cyzcyzz.github.io/icons/apple-touch-icon.png",
-        "license": "[OyFaCC - BLOG](http://www.oyfacc.cn/)",
+        "license": "[京ICP备20009601号](http://www.beian.miit.gov.cn/)",
         "publisher": {
             "@type": "Organization",
             "name": "OyFaCC",
